live apps fixed nowrap test1

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -266,7 +266,7 @@ figure {
   justify-content: space-between;
   -webkit-box-align: start;
   align-items: flex-start;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;;
   margin: 2em 0;
 
   img,
